# CTE_Demo

./: CMakeLists.txt  README.md  environment.yml  facesaver.py
shaders/CGDemo/: Basic.fs  Basic.vs
src/app/: CGDemo.cpp
src/include/: MeshData.hpp
src/lib/: MeshGLData.cpp
